--- a/project.gradle
+++ b/project.gradle
@@ -21,9 +21,9 @@
  * Project-specific settings. Unfortunately we cannot put the name in there!
  */
 group = "com.github.fge";
-version = "0.9.1-SNAPSHOT";
-sourceCompatibility = "1.6";
-targetCompatibility = "1.6"; // defaults to sourceCompatibility
+version = "0.9.1";
+sourceCompatibility = "1.7";
+targetCompatibility = "1.7"; // defaults to sourceCompatibility
 
 project.ext {
     description = "A fully functional Java implementation of RFC 6570 (URI templates)";
@@ -34,26 +34,33 @@ project.ext {
  */
 
 dependencies {
-    compile(group: "com.google.guava", name: "guava", version: "16.0.1");
+    compile(group: "com.google.guava", name: "guava", version: "18.0");
     compile(group: "com.github.fge", name: "msg-simple", version: "1.1");
-    compile(group: "com.google.code.findbugs", name: "jsr305",
-        version: "2.0.1");
-    testCompile(group: "org.testng", name: "testng", version: "6.8.7") {
+    compile(group: "com.google.code.findbugs", name: "jsr305", version: "3.0.0");
+    compile(group: "com.fasterxml.jackson.core", name: "jackson-core", version: "2.3.1");
+    compile(group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.3.1");
+    testCompile(group: "org.testng", name: "testng", version: "6.8.21") {
         exclude(group: "junit", module: "junit");
         exclude(group: "org.beanshell", module: "bsh");
         exclude(group: "org.yaml", module: "snakeyaml");
     };
     testCompile(group: "org.mockito", name: "mockito-core", version: "1.9.5");
-    testCompile(group: "com.github.fge", name: "jackson-coreutils",
-        version: "1.6");
+    testCompile(group: "com.github.fge", name: "jackson-coreutils", version: "1.6");
 }
 
 /*
  * External javadoc links
  */
-javadoc.options.links("http://docs.oracle.com/javase/6/docs/api/");
+javadoc.options.links("http://docs.oracle.com/javase/7/docs/api/");
 javadoc.options.links("http://jsr-305.googlecode.com/svn/trunk/javadoc/");
 javadoc.options.links("http://fasterxml.github.com/jackson-databind/javadoc/2.2.0/");
-javadoc.options.links("http://docs.guava-libraries.googlecode.com/git-history/v16.0.1/javadoc/");
+javadoc.options.links("http://docs.guava-libraries.googlecode.com/git-history/v18.0/javadoc/");
 javadoc.options.links("http://fge.github.io/msg-simple/");
 
+/*
+ * Repositories to use
+ */
+repositories {
+    mavenCentral();
+    mavenLocal();
+}
